--- a/LMS/static/ngTemplates/app.LMS.knowledgeBank.form.html
+++ b/LMS/static/ngTemplates/app.LMS.knowledgeBank.form.html
@@ -32,7 +32,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>Subject</label>
-          <input type="text" class="form-control" ng-model="form.subject" uib-typeahead="subject as subject.title for subject in subjectSearch($viewValue)">
+          <input type="text" class="form-control" ng-model="form.subject" uib-typeahead="subject as (subject.title +'- Class ' + subject.level) for subject in subjectSearch($viewValue)">
         </div>
       </div>
       <div class="col-md-6">
