--- a/LMS/static/ngTemplates/app.LMS.subject.item.html
+++ b/LMS/static/ngTemplates/app.LMS.subject.item.html
@@ -8,7 +8,7 @@
 
     <div class="row container-fluid" style="padding-top:20px;height:70px;">
       <div class="col-md-10">
-        <span class="text-muted" style="font-size:20px;">{{data.title}}</span> <br>
+        <span class="text-muted" style="font-size:20px;">{{data.title}}</span> Class {{data.level}} <br>
         <span class="text-muted">Total : {{data.topic_count}} Topics</span>
       </div>
       <div class = "col-md-2">
