--- a/LMS/static/ngTemplates/app.LMS.configure.form.html
+++ b/LMS/static/ngTemplates/app.LMS.configure.form.html
@@ -18,7 +18,7 @@
     <div class="col-md-5" ng-if="mode == 'topic'">
       <div class="form-group" >
         <label>Subject</label>
-        <input type="text" class="form-control" ng-model="form.subject" uib-typeahead="subject as subject.title for subject in subjectSearch($viewValue)">
+        <input type="text" class="form-control" ng-model="form.subject" uib-typeahead="subject as (subject.title +'- Class ' + subject.level) for subject in subjectSearch($viewValue)">
       </div>
       <div class="form-group">
         <label>Title</label>
