--- a/LMS/static/ngTemplates/app.LMs.course.notesUpload.html
+++ b/LMS/static/ngTemplates/app.LMs.course.notesUpload.html
@@ -21,5 +21,6 @@
   </div>
   <div class="form-group">
     <button type="button" class="btn btn-primary pull-right" ng-click="saveNote()">Save</button>
+    <button type="button" class="btn btn-primary pull-right" ng-click="saveNote()" ng-if="form.pk">Update</button>
   </div>
 </div>
