--- a/support/static/ngTemplates/app.masterSheet.newProduct.html
+++ b/support/static/ngTemplates/app.masterSheet.newProduct.html
@@ -41,6 +41,10 @@
         <label>Custom %</label>
         <input type="number" ng-model="data.custom" class="form-control" placeholder="Custom">
       </div>
+      <div class="form-group">
+        <label>Bar Code</label>
+        <input type="text" ng-model="data.bar_code" class="form-control" placeholder="Bar Code">
+      </div>
       <div class="btn-group pull-right" ng-if="mode=='new'">
         <!-- <button  type="button" class="btn btn-default" ng-click="submitForm(type , 'reset' , data)">
           Reset
