completed notes editing part

--- a/LMS/static/ngTemplates/app.LMs.course.notesUpload.html
+++ b/LMS/static/ngTemplates/app.LMs.course.notesUpload.html
@@ -1,4 +1,4 @@
-<div class="container-fluid"style="padding-bottom:15px;">
+<div class="container-fluid" style="padding-bottom:15px;">
   <div class="text-center">
     <h3>Upload Notes</h3>
     <hr>
@@ -13,14 +13,17 @@
   </div>
   <div class="form-group">
     <label>URL</label>
-    <input type="text" class="form-control" ng-model="form.url" placeholder="">
+    <input type="text" class="form-control" ng-model="form.urlSuffix" placeholder="" ng-disabled="form.pk">
   </div>
   <div class="form-group">
     <label>Image</label>
     <input type="file" file-model="form.image">
   </div>
+  <div class="form-group"ng-if="form.pk && form.image">
+    <label>{{form.image?'Previous Image':''}}</label>
+    <p>{{form.image}}</p>
+  </div>
   <div class="form-group">
-    <button type="button" class="btn btn-primary pull-right" ng-click="saveNote()">Save</button>
-    <button type="button" class="btn btn-primary pull-right" ng-click="saveNote()" ng-if="form.pk">Update</button>
+    <button type="button" class="btn btn-primary pull-right" ng-click="saveNote()">{{form.pk?'Update':'Save'}}</button>
   </div>
 </div>
