--- a/LMS/static/ngTemplates/app.LMS.courses.explore.html
+++ b/LMS/static/ngTemplates/app.LMS.courses.explore.html
@@ -214,7 +214,15 @@
             <a href="">
               <h5>{{n.urlSuffix}}</h5>
             </a>
-            <i class="fa fa-pencil" ng-click="addNotes(n.pk)" aria-hidden="true" style="cursor:pointer;"></i>
+            <i class="fa fa-pencil" ng-click="addNotes($index)" aria-hidden="true" style="cursor:pointer;"></i>
+            <i class="fa fa-trash" mwl-confirm
+            title="Confirm"
+            message="Are you sure you want to delete this?"
+            confirm-text="Yes <i class='fa fa-check'></i>"
+            cancel-text="No"
+            on-confirm="deleteNote($index,n.pk)"
+            confirm-button-type="danger"
+            cancel-button-type="default" aria-hidden="true" style="cursor:pointer;padding-left:15px;"></i>
             <i class="fa fa-plus-square pull-right" ng-click="noteSection($index)" aria-hidden="true" style="cursor:pointer;"></i>
           </div>
         </div>
