--- a/LMS/static/ngTemplates/app.Lms.course.note.explore.html
+++ b/LMS/static/ngTemplates/app.Lms.course.note.explore.html
@@ -8,7 +8,7 @@
     </div>
     <hr>
 
-      <h5> <span> <strong>Url :</strong> </span><a href=""> {{note.urlSuffix}}  </a></h5>
+    <h5> <span> <strong>Url :</strong> </span><a href=""> {{note.urlSuffix}} </a></h5>
 
     <h5> <span> <strong>Description :</strong> </span> {{note.description}}</h5>
     <hr>
@@ -17,16 +17,28 @@
   <div class="col-md-9">
     <h2 class="text-center"> <strong>Note Section</strong> </h2>
     <div ng-if="nSection!=''">
-      <hr>
-      <div ng-repeat="sec in nSection">
-        <span mathjax-bind="sec.txt"></span>
+      <div ng-repeat="sec in nSection" ng-init="sec.editing = false;">
+        <div class="pull-right btn-group"  style="padding:10px;">
+          <button type="button" class="btn btn-primary" ng-click="sec.editing = true;" ng-if="!sec.editing">
+            Edit
+          </button>
+          <button type="button" class="btn btn-primary" ng-click="save(sec);sec.editing = false;"  ng-if="sec.editing">
+            Save
+          </button>
+          <button type="button" class="btn btn-default">
+            <i class="fa fa-arrow-up"></i>
+          </button>
+          <button type="button" class="btn btn-default">
+            <i class="fa fa-arrow-down"></i>
+          </button>
+        </div>
+        <div mathjax-bind="sec.txt"></div>
+        <div class="text-center"style="margin-top:15px;margin-bottom:15px;">
+          <img ng-if="sec.image!= null" src="{{sec.image}}" width="200px" height="200px">
+        </div>
+        <div class="container-fluid" style="margin-top:15px;margin-bottom:15px;" ng-if="sec.editing">
+          <textarea ng-if="sec.mode == 'text'" type="text" class="form-control" rows="7" ng-model="sec.txt" style="resize:none;"> </textarea>
+          <input ng-if="sec.mode == 'image'" type="file" file-model="sec.image">
+        </div>
       </div>
     </div>
-    <div ng-if="nSection!==''" class="text-center">
-      <hr>
-      <div ng-repeat="sec in nSection">
-        <img ng-if="sec.image!= null" src="{{sec.image}}" width="200px" height="200px">
-      </div>
-    </div>
-  </div>
-</div>
