--- a/finance/static/ngTemplates/app.finance.expenses.html
+++ b/finance/static/ngTemplates/app.finance.expenses.html
@@ -44,7 +44,8 @@
         <div ng-if="tab.app == 'editinvoice'">
             <div ng-include="'/static/ngTemplates/app.finance.inboundInvoices.form.html'">
         </div>
-        <div ng-if="tab.app == 'detailsinvoice'">
+      </div>
+        <div ng-if="tab.app == 'idetails'">
           <div ng-include="'/static/ngTemplates/app.finance.inboundInvoices.explore.html'"></div>
         </div>
         <!-- <div ng-if="tab.app == 'selected'">
