--- a/finance/static/ngTemplates/app.finance.purchaseOrder.explore.html
+++ b/finance/static/ngTemplates/app.finance.purchaseOrder.explore.html
@@ -1,45 +1,91 @@
 <div ng-controller="businessManagement.finance.purchaseOrder.explore">
-
   <div class="row" style="padding-top:20px">
     <div class="col-md-3">
       <div class="row">
         <div class="col-md-12">
-          <label> Name : </label>
-          {{data.name}}
-        </div>
-        <div class="col-md-12">
-          <label> Person Name : </label>
-          {{data.personName}}
-        </div>
-        <div class="col-md-12">
-          <label> Status : </label>
-          {{data.status}}
-        </div>
-        <div class="col-md-12">
-          <label> Address : </label>
-          {{data.address}}
-        </div>
-        <div class="col-md-12">
-          <label> PO Number : </label>
-          {{data.poNumber}}
-        </div>
-        <div class="col-md-12">
-          <label> Quotation Number : </label>
-          {{data.quoteNumber}}
-        </div>
-        <div class="col-md-12">
-          <label> Delivery Date : </label>
-          {{data.deliveryDate}}
-        </div>
-        <div class="col-md-12">
-          <label> Terms & Condition : </label>
-          {{data.terms}}
+          <div class = "row"  style="padding-top:10px" >
+            <div class="col-md-6 text-right">
+                <strong> Name : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.name}}</span>
+            </div>
+          </div>
+          <div class = "row" style="padding-top:10px" >
+            <div class="col-md-6 text-right">
+                <strong>  Person Name : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.personName}}</span>
+            </div>
+          </div>
+          <div class = "row"  style="padding-top:10px">
+            <div class="col-md-6 text-right">
+                <strong>  Email :  </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.email}}</span>
+            </div>
+          </div>
+          <div class = "row"  style="padding-top:10px">
+            <div class="col-md-6 text-right">
+                <strong>  Phone :  </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.phone}}</span>
+            </div>
+          </div>
+          <div class = "row" style="padding-top:10px" >
+            <div class="col-md-6 text-right">
+                <strong>  Status : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.status}}</span>
+            </div>
+          </div>
+          <div class = "row" style="padding-top:10px" >
+            <div class="col-md-6 text-right">
+                <strong>  Address : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.address}}</span>
+            </div>
+          </div>
+          <div class = "row" style="padding-top:10px" >
+            <div class="col-md-6 text-right">
+                <strong>  PO Number : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.poNumber}}</span>
+            </div>
+          </div>
+          <div class = "row" style="padding-top:10px" >
+            <div class="col-md-6 text-right">
+                <strong>  Quotation Number : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.quoteNumber}}</span>
+            </div>
+          </div>
+          <div class = "row" style="padding-top:10px" >
+            <div class="col-md-6 text-right">
+                <strong> Delivery Date : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.deliveryDate}}</span>
+            </div>
+          </div>
+          <div class = "row" style="padding-top:10px" >
+            <div class="col-md-6 text-right">
+                <strong> Terms & Condition : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.terms}}</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <!-- </div>
-
-<div class="row" style="padding-top:20px"> -->
     <div class="col-md-9">
       <div class="row">
         <wizard steps="projectSteps.steps" editable="false" active="data.selectedStatus" error="false"></wizard>
@@ -52,19 +98,16 @@
               <th>Product Name</th>
               <th>Price</th>
               <th>Quantity</th>
-              <th ng-if="data.status=='Approved'">Received Quantity</th>
+              <th ng-if="data.status=='Approved'||data.status=='GRN'">Received Quantity</th>
             </tr>
             <tr ng-repeat="v in products track by $index">
               <td>{{$index + 1}}</td>
               <td>{{v.product}}</td>
               <td>{{v.price}}</td>
               <td>{{v.qty}}</td>
-              <th ng-if="data.status=='Approved'"><input type="text" class="form-control-pos text-center" ng-model="v.receivedQty"></th>
-              <!-- <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td> -->
+              <th ng-if="data.status=='GRN'"><input type="text" class="form-control-pos text-center" ng-model="v.receivedQty"></th>
+              <th ng-if="data.status=='Approved'">{{v.receivedQty}}</th>
             </tr>
-            <!-- <tr  >
-          <td ng-if="showButton"><button style="background-color:white;border:none;" ng-click="addTableRow($index)" ><i class="fa fa-plus" style="cursor:pointer"></i></button></td>
-        </tr> -->
           </tbody>
         </table>
       </div>
@@ -84,58 +127,16 @@
           </div>
         </div>
       </div>
-      <div class="row" style="padding-top:15px" ng-if="data.status=='Approved'">
-        <div class="col-md-11 text-right">
-          <button type="button" class="btn btn-primary" ng-click="addToInvoice()"> Add To Invoice</button>
-        </div>
-        <div class="col-md-1 text-left">
+      <div class="row" style="padding-top:15px" ng-if="data.status=='GRN'">
+        <div class="col-md-12 text-left">
           <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="saveData()" confirm-button-type="default"
             cancel-button-type="default"> Save</button>
         </div>
       </div>
-      <div class="row" style="padding-top:15px;" ng-if="invoice">
-        <div class="col-md-12 card" style="padding-top:15px">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <label>Bank Account Number</label>
-                <input type="password" class="form-control" ng-model="data.accNo">
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <label>Re-Enter Bank Account Number</label>
-                <input type="text" class="form-control" ng-model="data.reaccNo">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <label>Bank IFSC Code</label>
-                <input type="password" class="form-control" ng-model="data.ifsc">
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <label>Re-Enter Bank IFSC Code</label>
-                <input type="text" class="form-control" ng-model="data.reifsc">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <label>Bank Name</label>
-                <input type="text" class="form-control" ng-model="data.bankName" typeahead="bank as bank for bank in bankList | filter:$viewValue">
-              </div>
-            </div>
-            <div class="col-md-6 text-right" style="padding-top:20px">
-              <div class="form-group">
-                <button type="button" class="btn btn-primary" ng-click="saveBankDetails()"> Save</button>
-              </div>
-            </div>
-          </div>
+      <div class="row" style="padding-top:15px" ng-if="data.status=='Approved'">
+        <div class="col-md-12 text-right">
+          <span ><a class="btn btn-primary" target="_blank" href="/api/finance/grnDownload?value={{data.pk}}" style="min-width:50px"><i class="fa fa-download "></i> Download GRN</a></span>
+          <button type="button" class="btn btn-primary" ng-click="addToInvoice()"> Move To Invoice</button>
         </div>
       </div>
     </div>
