--- a/finance/static/ngTemplates/app.finance.inboundInvoices.explore.html
+++ b/finance/static/ngTemplates/app.finance.inboundInvoices.explore.html
@@ -1,84 +1,123 @@
 <div ng-controller="businessManagement.finance.inboundInvoices.explore">
 
-<div class="row" style="padding-top:20px">
-  <div class="col-md-3">
-    <div class="row">
-      <div class="col-md-12">
-        <label> Name : </label>
-        {{data.name}}
-      </div>
-      <div class="col-md-12">
-        <label> Person Name : </label>
-        {{data.personName}}
-      </div>
-      <div class="col-md-12">
-        <label> Status : </label>
-        {{data.status}}
-      </div>
-      <div class="col-md-12">
-        <label> Address : </label>
-        {{data.address}}
-      </div>
-      <div class="col-md-12">
-        <label> PO Number : </label>
-        {{data.poNumber}}
-      </div>
-      <div class="col-md-12">
-        <label> Quotation Number : </label>
-        {{data.quoteNumber}}
-      </div>
-      <div class="col-md-12">
-        <label> Delivery Date : </label>
-        {{data.deliveryDate}}
-      </div>
-      <div class="col-md-12">
-        <label> Terms & Condition : </label>
-        {{data.terms}}
-      </div>
-    </div>
-  </div>
-<!-- </div>
-
-<div class="row" style="padding-top:20px"> -->
-  <div class="col-md-9">
-    <!-- <div class="row" style="border-bottom:solid 2px #eeeeee;margin:5px"> -->
-    <table class="invoiceTable" style=" width: 100%;">
-      <tbody>
-        <tr style="background-color: #eeeeee;height: 50px;">
-          <th>S.No</th>
-          <th >Product Name</th>
-          <th>Price</th>
-          <th>Quantity</th>
-          <!-- <th></th> -->
-        </tr>
-        <tr ng-repeat="v in products track by $index">
-          <td>{{$index + 1}}</td>
-          <td>{{v.product}}</td>
-          <td>{{v.price}}</td>
-          <td>{{v.qty}}</td>
-          <!-- <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td> -->
-        </tr>
-        <!-- <tr  >
-          <td ng-if="showButton"><button style="background-color:white;border:none;" ng-click="addTableRow($index)" ><i class="fa fa-plus" style="cursor:pointer"></i></button></td>
-        </tr> -->
-      </tbody>
-    </table>
-    <div class="row" style="padding-top:15px" ng-if="data.status=='created'">
-      <div class="col-md-12">
-        <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="sendForApproval()"
-          confirm-button-type="default" cancel-button-type="default"> Send For Approval</button>
-      </div>
-    </div>
-    <div class="row" style="padding-top:15px" ng-if="data.status=='Sent'">
-      <div class="col-md-12 text-right">
-        <div class="btn-group">
-            <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="approve()"
-              confirm-button-type="default" cancel-button-type="default">Approve</button>
-              <button type="button" class="btn btn-danger pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="reject()"
-                confirm-button-type="default" cancel-button-type="default">Reject</button>
+  <div class="row" style="padding-top:20px">
+    <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-12">
+          <div class = "row"  style="padding-top:10px" >
+            <div class="col-md-6 text-right">
+                <strong> Name : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.name}}</span>
+            </div>
+          </div>
+          <div class = "row" style="padding-top:10px" >
+            <div class="col-md-6 text-right">
+                <strong>  Person Name : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.personName}}</span>
+            </div>
+          </div>
+          <div class = "row"  style="padding-top:10px">
+            <div class="col-md-6 text-right">
+                <strong>  Email :  </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.email}}</span>
+            </div>
+          </div>
+          <div class = "row"  style="padding-top:10px">
+            <div class="col-md-6 text-right">
+                <strong>  Phone :  </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.phone}}</span>
+            </div>
+          </div>
+          <div class = "row"  style="padding-top:10px">
+            <div class="col-md-6 text-right">
+                <strong>  Address :  </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.address}}</span>
+            </div>
+          </div>
+          <div class = "row"  style="padding-top:10px">
+            <div class="col-md-6 text-right">
+                <strong> GSTIN : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.gstIn}}</span>
+            </div>
+          </div>
+          <div class = "row"  style="padding-top:10px">
+            <div class="col-md-6 text-right">
+                <strong> PO Number :  </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.poNumber}}</span>
+            </div>
+          </div>
+          <div class = "row"  style="padding-top:10px">
+            <div class="col-md-6 text-right">
+                <strong> Delivery Date : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.deliveryDate}}</span>
+            </div>
+          </div>
+          <div class = "row"  style="padding-top:10px">
+            <div class="col-md-6 text-right">
+                <strong> Payment Due Date : </strong>
+            </div>
+            <div class="col-md-6">
+                <span>{{data.paymentDueDate}}</span>
+            </div>
+          </div>
+          <div class = "row"  style="padding-top:10px">
+            <div class="col-md-6 text-right">
+                <strong> Terms & Condition : </strong>
+            </div>
+            <div class="col-md-6">
+                <span> {{data.invoiceTerms}}</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    <!-- </div>
+
+<div class="row" style="padding-top:20px"> -->
+    <div class="col-md-9">
+      <div class="row">
+        <wizard steps="projectSteps.steps" editable="false" active="data.selectedStatus" error="false"></wizard>
+      </div>
+      <div class="row" style="padding-top:15px">
+        <table class="invoiceTable" style=" width: 100%;">
+          <tbody>
+            <tr style="background-color: #eeeeee;height: 50px;">
+              <th>S.No</th>
+              <th>Product Name</th>
+              <th>Price</th>
+              <th>Quantity</th>
+              <th>HSN/SAC Code</th>
+              <th>Tax (%)</th>
+              <th>Sub Total</th>
+            </tr>
+            <tr ng-repeat="v in products track by $index">
+              <td>{{$index + 1}}</td>
+              <td>{{v.product}}</td>
+              <td>{{v.price}}</td>
+              <td>{{v.receivedQty}}</td>
+              <td>{{v.hsn}}</td>
+              <td>{{v.tax}}</td>
+              <td>{{v.total}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
-</div>
 </div>
