--- a/finance/static/ngTemplates/app.finance.inboundInvoices.item.html
+++ b/finance/static/ngTemplates/app.finance.inboundInvoices.item.html
@@ -1,41 +1,48 @@
-<div class="col-md-4 card">
-  <div class="container-fluid" style="padding-top:25px;padding-bottom:25px;cursor:pointer"  ng-click = "rowActionClicked('details')">
-    <div class="row">
+<div class="col-md-3 " style="margin-bottom:15px">
+  <div class="card" style="padding:20px;cursor:pointer;border:2px solid #73AD21;border-radius: 25px"  ng-click = "rowActionClicked('details')">
+    <div class="row" >
       <div class="col-md-10">
-        <div class="row">
-          <div class="col-md-5">
-            <span style="font-size:14px"><strong> Name : </strong></span>
+        <div class="row" style="padding-top:5px">
+          <div class="col-md-2">
+            <span><i class="fa fa-building fa-2x"></i></span>
           </div>
-          <div class="col-md-5">
+          <div class="col-md-10">
             <span style="font-size:14px">{{data.name}}</span>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-5">
-            <span style="font-size:14px"><strong> Person Name : </strong></span>
+        <div class="row" style="padding-top:5px">
+          <div class="col-md-2">
+            <span><i class="fa fa-user fa-2x"></i></span>
           </div>
-          <div class="col-md-5">
-            <span style="font-size:14px">{{data.name}}</span>
+          <div class="col-md-10">
+            <span style="font-size:14px">{{data.personName}}</span>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-5">
-            <span style="font-size:14px"><strong> Status : </strong></span>
+        <div class="row" style="padding-top:5px">
+          <div class="col-md-2">
+            <span><i class="fa fa-phone fa-2x"></i></span>
           </div>
-          <div class="col-md-5">
-            <span style="font-size:14px">{{data.status}}</span>
+          <div class="col-md-10">
+            <span style="font-size:14px">{{data.phone}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:5px">
+          <div class="col-md-2">
+            <span><i class="fa fa-envelope fa-2x"></i></span>
+          </div>
+          <div class="col-md-10">
+            <span style="font-size:14px">{{data.email}}</span>
           </div>
         </div>
       </div>
-      <div class="col-md-2">
-        <div class="row">
-            <i class="fa fa-2x fa-pencil" style="position:absolute;right:20px;cursor:pointer;" ng-click = "rowActionClicked('edit');$event.stopPropagation();"></i>
+      <div class="col-md-2" style="color:#73AD21">
+        <div class="row" >
+            <i class="fa fa-2x fa-pencil" style="position:absolute;right:20px;top:10px;cursor:pointer;" ng-click = "rowActionClicked('edit');$event.stopPropagation();"></i>
         </div>
         <div class="row" ng-click=";$event.stopPropagation();">
-            <i class="fa fa-2x fa-trash"  mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete')" confirm-button-type="default" cancel-button-type="default"  style="position:absolute;right:20px;top:40px;cursor:pointer;"></i>
+            <i class="fa fa-2x fa-trash"  mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete')" confirm-button-type="default" cancel-button-type="default"  style="position:absolute;right:20px;top:100px;cursor:pointer;"></i>
         </div>
       </div>
       </div>
     </div>
   </div>
-</div>
