--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top animated slideInDown" id="navbarTop" style="{{sideMenuVisibility ? 'margin-left:13%': 'margin-left:4%;'}};{{mobileView ? 'margin-left:31%':''}}" >
+<nav class="navbar navbar-default navbar-fixed-top animated slideInDown" id="navbarTop" style="{{sideMenuVisibility ? 'margin-left:13%': 'margin-left:5%;'}};{{mobileView ? 'margin-left:31%':''}}" >
   <div class="container-fluid" style="height:100%;">
     <div class="navbar-header"  style="height: 100%;">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navBar" aria-expanded="false" aria-controls="navbar">
@@ -36,7 +36,7 @@
     				<li><a href="" ng-click="openSettings('right' , false , settings )"><i class="fa fa-gears fa-fw"></i> Settings</a></li>
             <li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
     				<li role="separator" class="divider"></li>
-    				<!-- <li><a href="" ng-click="about()"> <i class="fa fa-info fa-fw"></i> About</a></li> -->
+    				<li><a href="" ng-click="about()"> <i class="fa fa-info fa-fw"></i> About</a></li>
   			  </ul>
   			</li>
   		</ul>
