--- a/LMS/static/ngTemplates/app.LMS.evaluation.explore.html
+++ b/LMS/static/ngTemplates/app.LMS.evaluation.explore.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" ng-controller="home.LMS.evaluation.explore">
   <div class="col-md-10">
-  <label class="text-muted"><h4>Question Paper</h4></label>
+  <label class="text-muted"><h4>Question Paper:{{paper.name}}</h4></label>
     <div class="row" ng-repeat="y in paper.questions">
       <div class="col-md-1">
         <div class="form-group pull-right">
