--- a/LMS/static/ngTemplates/app.LMS.evaluation.form.html
+++ b/LMS/static/ngTemplates/app.LMS.evaluation.form.html
@@ -2,8 +2,16 @@
   <div class="col-md-6">
     <h4 ng-if="mode=='new'">Create Question Paper</h4>
     <h4 ng-if="mode=='edit'">Update Question Paper</h4>
-
     <div class="row">
+      <div class="col-md-12">
+        <div class="form-group">
+          <label>Group Name</label>
+          <div class="{{(form.group.length>0||form.group.pk) ? 'input-group':''}}">
+              <input uib-typeahead="pg as pg.title for pg in paperGroupSearch($viewValue)" ng-model="form.group" type="text" class="form-control" placeholder="Search Using Tilte">
+              <span ng-click="openPaperGroup()" ng-if="(form.group.length>0||form.group.pk)" class="input-group-addon btn btn-primary" ><i class="fa fa-{{form.group.pk ? 'pencil':'plus'}}"></i> {{form.group.pk ? 'Update':'New'}}</span>
+          </div>
+        </div>
+      </div>
       <div class="col-md-6">
         <div class="form-group">
           <label style="margin-top:20px;">QuestionPaper Title</label>
