--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -27,11 +27,11 @@
           </div>
         </div>
       </div>
-      <div class="row" style="padding:5px;">
+      <div class="row" style="padding:5px; position:relative;">
         <div class="col-md-9" style="padding-right:0px;">
           <i class="fa fa-circle" aria-hidden="true" style="color:{{data.isOnline ? '#37a508':'#ff0022'}}"></i>
-           <span style="font-size:15px;">{{data.uid}}</span>
-           <span style="font-size:18px;margin-left:10px">{{companyName}}</span>
+           <span style="font-size:15px; cursor:default;" ng-mouseover="showCompanyName = true" ng-mouseleave="showCompanyName = false">{{data.uid}}</span>
+           <span class="custom_tool_tip" ng-if="showCompanyName"> {{companyName}} </span>
           <div style="margin:5px 10px">
             <span ng-if="data.name" class="text-muted" style="font-size:15px;">{{data.name}} </span>
             <span ng-if="data.email" class="text-muted" style="font-size:10px;" >({{data.email}})</span>
@@ -56,7 +56,6 @@
       <!-- <i style="position:absolute; right:70px; top:105px; color:#fff; cursor:pointer;" ng-click="!data.alreadyDone? toggleVisitorScreen():''" class="fa fa-video-camera fa-lg" aria-hidden="true"></i> -->
       <iframe id="iframeChat{{data.uid}}" ng-src="{{data.videoUrl | trusted}}" scrolling="no" style="height:100%; transition:0.5s;width:100%; border:1px solid #e0e0e0;" allow="geolocation; microphone; camera;"  autoplay="true" allowfullscreen></iframe>
       <!-- <iframe ng-src="{{data.currentUrl | trusted}}" scrolling="no" style="height:100%; transition:0.5s;width:100%; border:1px solid #e0e0e0;" allowFullScreen></iframe> -->
-
     </div>
     <div ng-if="data.audio&&!data.closeIframe" class="container-fluid" style="height:3.5vh; padding:0px;" ng-init="setHeight()">
       {{setHeight()}}
