--- a/LMS/static/ngTemplates/app.LMS.configure.form.html
+++ b/LMS/static/ngTemplates/app.LMS.configure.form.html
@@ -25,6 +25,10 @@
         <input ng-model="form.title" type="text" class="form-control">
       </div>
       <div class="form-group">
+        <label>SEO-Title</label>
+        <input ng-model="form.seoTitle" type="text" class="form-control">
+      </div>
+      <div class="form-group">
         <label>Description</label>
         <textarea ng-model="form.description" name="name" class="form-control" rows="8" cols="80"></textarea>
       </div>
