--- a/support/static/ngTemplates/app.stockReport.create.html
+++ b/support/static/ngTemplates/app.stockReport.create.html
@@ -8,7 +8,7 @@
 <div class="modal-body">
   <div class="row">
     <div class="col-md-12">
-      <button ng-if="count==0" class="btn btn-primary" ng-click="saveReport()"> Save Report </button>
+      <button ng-if="count==0" class="btn btn-primary" ng-click="saveReport()"> Start A Report </button>
       <!-- <span ng-if="count>0" ><a class="btn btn-primary" target="_blank" href="/api/support/" style="min-width:50px"><i
         class="fa fa-download"></i> Download</a> </span> -->
     </div>
